[package]
name = "anthea-rs"
version = "0.1.0"
authors = ["Jean-Philippe Moresmau <jean-philippe.moresmau@asg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.5.13"
specs = "0.15.1"
specs-derive = "0.4.0"
ron = "0.5.1"
serde = "1.0.104"
rand = "0.7.3"